salesforce_sfdx/main/default/objects/Epic_FHIR_Endpoint__c/Epic_FHIR_Endpoint__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Epic FHIR Endpoint</label>
</CustomObject>