salesforce_sfdx/main/default/objects/Epic_FHIR_Endpoint__c/fields/cert__c.field-meta.xml
<CustomField>
    <fullName>cert__c</fullName>
    <label>cert</label>
    <length>32</length>
    <type>Text</type>
</CustomField>