salesforce_sfdx/main/default/objects/Epic_FHIR_Endpoint__c/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>client_id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>