salesforce_sfdx/main/default/objects/Epic_FHIR_Endpoint__c/fields/jti__c.field-meta.xml
<CustomField>
    <fullName>jti__c</fullName>
    <label>jti</label>
    <length>32</length>
    <type>Text</type>
</CustomField>