salesforce_sfdx/main/default/objects/Epic_FHIR_Endpoint__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>This setting stores a customer's Epic FHIR endpoint.</description>
    <label>URL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>